calling also work

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -16,11 +16,11 @@
     <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
+    <%= f.label :Message %>
+    <%= f.text_area :email ,:cols => "30", :rows => "10"%>
   </div>
   <div class="field">
-    <%= f.label :phone %>
+    <%= f.label :mobile %>
     <%= f.text_field :phone %>
   </div>
   <!-- <div class="field">
